Combine javascript library files into one base file

--- a/public/test/index.html
+++ b/public/test/index.html
@@ -13,9 +13,7 @@
 	<script src="lib/jasmine-2.4.1/boot.js"></script>
 
 	<!-- include source files here... -->
-	<script src="../js/base/base.js"></script>
-	<script src="../js/base/event.js"></script>
-	<script src="../js/base/ajax.js"></script>
+	<script src="../js/base/AnimeClient.js"></script>
 
 	<!-- include spec files here... -->
 	<script src="spec/BaseSpec.js"></script>
