--- a/public/test/index.html
+++ b/public/test/index.html
@@ -2,21 +2,43 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Jasmine Spec Runner v2.4.1</title>
-	<link rel="shortcut icon" type="image/png" href="lib/jasmine-2.4.1/jasmine_favicon.png">
-	<link rel="stylesheet" href="lib/jasmine-2.4.1/jasmine.css">
+	<title>Hummingbird AnimeClient Front-end Testsuite</title>
+	<link rel="stylesheet" href="lib/mocha.css">
 </head>
 <body>
-	<div class="jasmine_html-reporter"></div>
-	<script src="lib/jasmine-2.4.1/jasmine.js"></script>
-	<script src="lib/jasmine-2.4.1/jasmine-html.js"></script>
-	<script src="lib/jasmine-2.4.1/boot.js"></script>
+	<section id="parentTest">
+		<article class="child">
+			<div class="grandChild"></div>
+		</article>
+	</section>
+	<div id="mocha">
+		<ul id="mocha-stats">
+			<li class="progress"></li>
+			<li class="passes"></li>
+			<li class="failures"></li>
+			<li class="duration"></li>
+		</ul>
+		<ul id="mocha-report"></ul>
+	</div>
+	<script src="../js/base/classList.js"></script>
+	<script src="lib/testBundle.js"></script>
+
+	<script>
+		var expect = chai.expect;
+		mocha.setup('tdd');
+	</script>
 
 	<!-- include source files here... -->
 	<script src="../js/base/AnimeClient.js"></script>
 
-	<!-- include spec files here... -->
-	<script src="spec/BaseSpec.js"></script>
-<body>
+	<!-- include test files here... -->
+	<script src="tests/AnimeClient.js"></script>
+	<script src="tests/ajax.js"></script>
+
+	<script>
+		mocha.checkLeaks();
+		mocha.globals(['AnimeClient']);
+		mocha.run();
+	</script>
 </body>
 </html>
