Remove php js minifier script, in favor of commited js files

--- a/public/test/index.html
+++ b/public/test/index.html
@@ -20,7 +20,7 @@
 		</ul>
 		<ul id="mocha-report"></ul>
 	</div>
-	<script src="../js/base/classList.js"></script>
+	<script src="../js/src/base/classList.js"></script>
 	<script src="lib/testBundle.js"></script>
 
 	<script>
@@ -29,7 +29,7 @@
 	</script>
 
 	<!-- include source files here... -->
-	<script src="../js/base/AnimeClient.js"></script>
+	<script src="../js/src/base/AnimeClient.js"></script>
 
 	<!-- include test files here... -->
 	<script src="tests/AnimeClient.js"></script>
