More test coverage of FormGenerator

--- a/tests/AnimeClient/__snapshots__/FormGeneratorTest__testGeneration__12.html
+++ b/tests/AnimeClient/__snapshots__/FormGeneratorTest__testGeneration__12.html
@@ -1,8 +1,4 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN" "http://www.w3.org/TR/REC-html40/loose.dtd">
 <html><body>
-<select id="theme" name="theme">
-    <option value="auto">Automatically match OS theme</option>
-    <option value="light">Original Light Theme</option>
-    <option value="dark">Dark Theme</option>
-</select>
+<input id="whose_list" type="text" name="whose_list" value="">
 </body></html>
