--- a/tests/AnimeClient/__snapshots__/FormGeneratorTest__testGeneration__16.html
+++ b/tests/AnimeClient/__snapshots__/FormGeneratorTest__testGeneration__16.html
@@ -1,11 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN" "http://www.w3.org/TR/REC-html40/loose.dtd">
 <html><body>
-<select id="default_anime_list_path" name="default_anime_list_path">
-    <option value="watching">Watching</option>
-    <option value="plan_to_watch">Plan to Watch</option>
-    <option value="on_hold">On Hold</option>
-    <option value="dropped">Dropped</option>
-    <option value="completed">Completed</option>
-    <option value="all">All</option>
+<select id="default_list" name="default_list">
+    <option value="anime">Anime</option>
+    <option value="manga">Manga</option>
 </select>
 </body></html>
