--- a/tests/AnimeClient/__snapshots__/FormGeneratorTest__testGeneration__13.html
+++ b/tests/AnimeClient/__snapshots__/FormGeneratorTest__testGeneration__13.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN" "http://www.w3.org/TR/REC-html40/loose.dtd">
 <html><body>
-<label><input type="radio" name="show_anime_collection" value="1"> Yes</label>
-<label><input type="radio" name="show_anime_collection" value="0" checked> No</label>
+<select id="theme" name="theme">
+    <option value="auto">Automatically match OS theme</option>
+    <option value="light">Original Light Theme</option>
+    <option value="dark">Dark Theme</option>
+</select>
 </body></html>
