--- a/tests/AnimeClient/__snapshots__/FormGeneratorTest__testGeneration__15.html
+++ b/tests/AnimeClient/__snapshots__/FormGeneratorTest__testGeneration__15.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN" "http://www.w3.org/TR/REC-html40/loose.dtd">
 <html><body>
-<select id="default_list" name="default_list">
-    <option value="anime">Anime</option>
-    <option value="manga">Manga</option>
-</select>
+<label><input type="radio" name="show_manga_collection" value="1"> Yes</label>
+<label><input type="radio" name="show_manga_collection" value="0" checked> No</label>
 </body></html>
