--- a/tests/AnimeClient/__snapshots__/FormGeneratorTest__testGeneration__21.html
+++ b/tests/AnimeClient/__snapshots__/FormGeneratorTest__testGeneration__21.html
@@ -1,4 +1,4 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN" "http://www.w3.org/TR/REC-html40/loose.dtd">
 <html><body>
-<input id="pass" type="text" name="pass" value="">
+<input id="user" type="text" name="user" value="">
 </body></html>
