--- a/tests/AnimeClient/__snapshots__/FormGeneratorTest__testGeneration__8.html
+++ b/tests/AnimeClient/__snapshots__/FormGeneratorTest__testGeneration__8.html
@@ -1,9 +1,4 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN" "http://www.w3.org/TR/REC-html40/loose.dtd">
 <html><body>
-<select id="driver" name="driver">
-    <option value="apcu">APCu</option>
-    <option value="memcached">Memcached</option>
-    <option value="redis">Redis</option>
-    <option value="null">No Cache</option>
-</select>
+<input type="hidden" name="special_hidden_flag" value="foo_bar">
 </body></html>
