--- a/tests/AnimeClient/__snapshots__/FormGeneratorTest__testGeneration__9.html
+++ b/tests/AnimeClient/__snapshots__/FormGeneratorTest__testGeneration__9.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN" "http://www.w3.org/TR/REC-html40/loose.dtd">
 <html><body>
-<input id="connection" type="text" name="connection" value="">
+<select id="driver" name="driver">
+    <option value="apcu">APCu</option>
+    <option value="memcached">Memcached</option>
+    <option value="redis">Redis</option>
+    <option value="null">No Cache</option>
+</select>
 </body></html>
